<resources>
    <string name="app_name">Alarms</string>
    <string name="login_fingerprint_text">Touch the fingerprint sensor</string>
    <string name="home_tab">HOME</string>
    <string name="alarms_tab">ALARMS</string>
    <string name="games_tab">GAMES</string>
    <string name="profile_tab">PROFILE</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="authenticate_fingerprint">Error authenticating fingerprint</string>
    <string name="auth_successful">Fingerprint authentication successful</string>
    <string name="Unknown_permission_request">Unrecognized permission request</string>
    <string name="permission_refused">" User refused Fingerprint permission"</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="address_hint">Address</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="with_fingerprint">With Fingerprint</string>
    <string name="with_fingerprint_and_password">With Fingerprint and Password</string>
    <string name="login_with_fingerprint">LOGIN WITH FINGERPRINT</string>
    <string name="login_now">LOGIN</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>
