<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/_4sdp"
    android:background="@color/colorBorder">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/login_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:padding="@dimen/_4sdp"
                android:text=""
                android:textColor="@color/colorAccent" />
            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">

                <!--<LinearLayout-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textStyle="bold"-->
                        <!--android:layout_marginLeft="2dp"-->
                        <!--android:text="ALARM DATE"-->
                        <!--android:gravity="start"-->
                        <!--android:textSize="15sp"/>-->
                    <!--<View-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="0dp"-->
                        <!--android:layout_weight="1" />-->

                    <!--<ImageView-->
                        <!--android:layout_width="25dp"-->
                        <!--android:layout_height="25dp"-->
                        <!--android:layout_gravity="end"-->
                        <!--android:background="@drawable/calendar_64"-->
                        <!--/>-->

                <!--</LinearLayout>-->

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:textColorHint="@color/colorLight"
                    android:inputType="text"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorBlack"
                    android:padding="@dimen/_12sdp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">
                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textColorHint="@color/colorLight"
                    android:inputType="text"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorBlack"
                    android:padding="@dimen/_12sdp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">
                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:textColorHint="@color/colorLight"
                    android:inputType="text"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorBlack"
                    android:padding="@dimen/_12sdp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:textColorHint="@color/colorLight"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorBlack"
                    android:padding="@dimen/_12sdp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:textColorHint="@color/colorLight"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorBlack"
                    android:padding="@dimen/_12sdp" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:paddingBottom="@dimen/_16sdp"
                android:paddingTop="@dimen/_16sdp"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:background="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>